--- a/index.html
+++ b/index.html
@@ -1,24 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product card UI </title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Product card UI</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  </head>
+  <body>
     <div class="card">
-        <div class="imgBx">
-            <img src="shoe.jpg">
+      <div class="imgBx">
+        <img src="shoe.jpg" />
+      </div>
+      <div class="details">
+        <h3>Nike Air Max <br /><span>Men's Shoe</span></h3>
+        <h4>Product Details</h4>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad alias
+          labore sapiente quam. Est sunt quod qui, adipisci culpa molestiae?
+        </p>
+        <h4>Size</h4>
+        <ul class="size">
+            <li>36</li>
+            <li>38</li>
+            <li>40</li>
+            <li>42</li>
+            <li>44</li>
+            
+        </ul>
+        <div class="group">
+            <h2><sup>$</sup>199<small>.99</small></h2>
+            <a href="#">Buy Now</a>
         </div>
-        <div class="details">
-            <h3>Nike Air Max <br><span>Men's Shoe</span></h3>
-        </div>
+      </div>
     </div>
-    
-</body>
+  </body>
 </html>
